--- a/Lab7Inheritance/app/views/addTask.scala.html
+++ b/Lab7Inheritance/app/views/addTask.scala.html
@@ -1,4 +1,4 @@
-@(itemForm: Form[models.ItemOnSale],user: models.users.User)
+@(itemForm: Form[models.products.ItemOnSale],user: models.users.User)
 
 
 @import helper._
@@ -22,12 +22,17 @@
              and this is provided by the method Category.options(), which we added to the Category
              class in the previous step. -->
             @inputText(itemForm("name"), '_label -> "Name", 'class -> "form-control")
-            @select(
-                itemForm("category.id"),
-                options(Category.options),
-                '_label -> "Category", '_default -> "-- Choose a category --", 
-                '_showConstraints -> false, 'class -> "form-control"
-            )
+            <p><strong>Categories</strong></p>
+            @for((value, name) <- products.Category.options) {
+                <input type="checkbox" name="catSelect[]" value="@value"  
+                    @if(itemForm("id").getValue.isPresent && itemForm("id").getValue.get != "") { 
+                        @if(products.Category.inCategory(value.toLong, itemForm("id").getValue.get.toLong)) {
+                            checked
+                        }
+                    } 
+                /> @name </br>
+            }
+            </p>
             
             @inputText(itemForm("Address"), '_label -> "Address", 'class -> "form-control")
             @inputText(itemForm("Project"), '_label -> "Project", 'class -> "form-control")
