--- a/Lab7Inheritance/app/views/registerUser.scala.html
+++ b/Lab7Inheritance/app/views/registerUser.scala.html
@@ -3,7 +3,7 @@
 @import helper._
 
 @main("Register User",user){
-    <p class="lead">Add a new user</p>
+    <p class="lead">Add a new Employee</p>
 
     @* Display error message from flash, if it is set *@
 	@if(flash.containsKey("error")) {
