--- a/Lab7Inheritance/app/views/addTask.scala.html
+++ b/Lab7Inheritance/app/views/addTask.scala.html
@@ -4,7 +4,7 @@
 @import helper._
 
 @main("Add Item",user){
-    <p class="lead">Add A New</p>
+    <p class="lead">Add A New Task</p>
 
     <!-- Use a views.html.helpers package method to create the form (instead of html)-->
     <!-- Note the arguments that are being passed to the scala function form (they are
@@ -22,7 +22,7 @@
              and this is provided by the method Category.options(), which we added to the Category
              class in the previous step. -->
             @inputText(itemForm("name"), '_label -> "Name", 'class -> "form-control")
-            <p><strong>Categories</strong></p>
+            <p><strong>Departments</strong></p>
             @for((value, name) <- products.Category.options) {
                 <input type="checkbox" name="catSelect[]" value="@value"  
                     @if(itemForm("id").getValue.isPresent && itemForm("id").getValue.get != "") { 
@@ -47,7 +47,7 @@
                 2. A button that allows the user to cancel without adding an item
             -->
             <div class="actions">
-                <input type="submit" value="Add/Update item" class="btn btn-primary">
+                <input type="submit" value="Add/Update Task" class="btn btn-primary">
                 <a href="@routes.HomeController.onsale(0)">
                     <button type="button" class="btn btn-warning">Cancel</button>
                 </a>
